--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,29 @@
           </reportPlugins>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+        <artifactId>replacer</artifactId>
+        <version>1.5.2</version>
+        <executions>
+            <execution>
+            <goals>
+                <goal>replace</goal>
+            </goals>
+            </execution>
+        </executions>
+        <configuration>
+            <includes>
+                <include>winpkg/src/scripts/*</include>
+            </includes>
+            <replacements>
+                <replacement>
+                    <token>@phoenix.version@</token>
+                    <value>${project.version}</value>
+                </replacement>
+            </replacements>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -570,6 +593,12 @@
           </plugins>
         </pluginManagement>
       </build>
+    </profile>
+    <profile>
+        <id>windows</id>
+        <modules>
+            <module>winpkg</module>
+        </modules>
     </profile>
   </profiles>
 </project>
