--- a/winpkg/pom.xml
+++ b/winpkg/pom.xml
@@ -20,11 +20,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache</groupId>
+        <groupId>org.apache.phoenix</groupId>
         <artifactId>phoenix</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>org.apache.knox</groupId>
+    <groupId>org.apache.phoenix</groupId>
     <artifactId>phoenix-winpkg</artifactId>
     <description>Apache Phoenix WinPkg</description>
     <name>Apache Phoenix WinPkg</name>
