--- a/bin/log4j.properties
+++ b/bin/log4j.properties
@@ -67,3 +67,4 @@ log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}: 
 # Custom Logging levels
 log4j.logger.org.apache.zookeeper=WARN
 log4j.logger.org.apache.hadoop.hbase.HBaseConfiguration=ERROR
+log4j.logger.org.apache.hadoop.hbase.client.ConnectionManager$HConnectionImplementation=ERROR
