--- a/pom.xml
+++ b/pom.xml
@@ -58,17 +58,6 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
-    <repository>
-       <id>hortonworks.repo</id>
-       <url>http://repo.hortonworks.com/content/repositories/releases</url>
-       <name>Hortonworks Repo</name>
-       <releases>
-          <enabled>true</enabled>
-       </releases>
-       <snapshots>
-         <enabled>false</enabled>
-       </snapshots>
-    </repository>
   </repositories>
 
   <parent>
@@ -91,13 +80,14 @@
 
     <!-- Hadoop Versions -->
     <hbase-hadoop1.version>0.98.1-hadoop1</hbase-hadoop1.version>
-    <hbase-hadoop2.version>[0.98.0.2.2.0.0,0.98.0.2.3.0.0)</hbase-hadoop2.version>
+    <hbase-hadoop2.version>0.98.1-hadoop2</hbase-hadoop2.version>
     <hadoop-one.version>1.0.4</hadoop-one.version>
-    <hadoop-two.version>[2.5.0.2.2.0.0,2.5.0.2.3.0.0)</hadoop-two.version>
+    <hadoop-two.version>2.2.0</hadoop-two.version>
 
     <!-- Dependency versions -->
     <commons-cli.version>1.2</commons-cli.version>
-    <pig.version>[0.13.0.2.2.0.0,0.13.0.2.3.0.0)</pig.version>
+    <hadoop.version>1.0.4</hadoop.version>
+    <pig.version>0.12.0</pig.version>
     <jackson.version>1.8.8</jackson.version>
     <antlr.version>3.5</antlr.version>
     <log4j.version>1.2.17</log4j.version>
@@ -111,7 +101,7 @@
     <sqlline.version>1.1.2</sqlline.version>
     <guava.version>12.0.1</guava.version>
     <jackson.version>1.8.8</jackson.version>
-    <flume.version>[1.5.0.2.2.0.0,1.5.0.2.3.0.0)</flume.version>
+    <flume.version>1.4.0</flume.version>
     <findbugs.version>1.3.2</findbugs.version>
     <jline.version>2.11</jline.version>
     <snappy.version>1.1.0.1</snappy.version>
