--- a/bin/log4j.properties
+++ b/bin/log4j.properties
@@ -70,3 +70,5 @@ log4j.logger.org.apache.hadoop.hbase.zookeeper.RecoverableZooKeeper=ERROR
 log4j.logger.org.apache.hadoop.hbase.zookeeper.ZKUtil=ERROR
 log4j.logger.org.apache.hadoop.hbase.HBaseConfiguration=ERROR
 log4j.logger.org.apache.hadoop.hbase.client.ConnectionManager$HConnectionImplementation=ERROR
+log4j.logger.org.apache.hadoop.hbase.util.DynamicClassLoader=ERROR
+log4j.logger.org.apache.hadoop.util.NativeCodeLoader=ERROR
