BUG-22471: build bustage: phoenix champlain windows unittest job failure (dependencies?)

--- a/phoenix-core/pom.xml
+++ b/phoenix-core/pom.xml
@@ -349,6 +349,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-common</artifactId>
+      <version>${hbase.version}</version>
+      <type>test-jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-protocol</artifactId>
     </dependency>
     <dependency>
