--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,11 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-source-plugin</artifactId>
+           <version>2.4</version>
+	<pligin>
       </plugins>
     </pluginManagement>
 
@@ -369,13 +374,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.2.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
-            <phase>prepare-package</phase>
+            <phase>verify</phase>
             <goals>
               <goal>jar-no-fork</goal>
+              <goal>test-jar-no-fork</goal>
             </goals>
           </execution>
         </executions>
