--- a/phoenix-core/pom.xml
+++ b/phoenix-core/pom.xml
@@ -444,7 +444,7 @@
     <dependency>
         <groupId>com.microsoft.azure</groupId>
         <artifactId>azure-storage</artifactId>
-        <version>2.2.0</version>
+        <version>${azure-storage.version}</version>
         <scope>compile</scope>
     </dependency>
   </dependencies>
