--- a/phoenix-server-client/pom.xml
+++ b/phoenix-server-client/pom.xml
@@ -62,5 +62,9 @@
       <groupId>sqlline</groupId>
       <artifactId>sqlline</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+    </dependency>
   </dependencies>
 </project>
