--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
     <top.dir>${project.basedir}</top.dir>
 
     <!-- Hadoop Versions -->
-    <hbase.version>1.1.2</hbase.version>
+    <hbase.version>1.1.3</hbase.version>
     <hadoop-two.version>2.7.1</hadoop-two.version>
 
     <!-- Dependency versions -->
@@ -514,7 +514,7 @@
       <dependency>
         <groupId>org.apache.hbase</groupId>
         <artifactId>hbase-testing-util</artifactId>
-        <version>1.1.3</version>
+        <version>${hbase.version}</version>
         <scope>test</scope>
         <optional>true</optional>
         <exclusions>
@@ -527,7 +527,7 @@
       <dependency>
         <groupId>org.apache.hbase</groupId>
         <artifactId>hbase-it</artifactId>
-        <version>1.1.3</version>
+        <version>${hbase.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
         <exclusions>
