--- a/phoenix-pherf/pom.xml
+++ b/phoenix-pherf/pom.xml
@@ -105,6 +105,11 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-minicluster</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
