--- a/phoenix-server/pom.xml
+++ b/phoenix-server/pom.xml
@@ -103,24 +103,20 @@
                 <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
                 <shadeTestJar>false</shadeTestJar>
                 <transformers>
-                    <!--<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer">-->
-                    <!--</transformer>-->
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
-                        <resources>
-                            <resource>LICENSE.txt</resource>
-                            <resource>ASL2.0</resource>
-                        </resources>
-                    </transformer>
                     <transformer
                             implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                         <addHeader>false</addHeader>
                     </transformer>
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                    <transformer
-                            implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-                        <resource>LICENSE.txt</resource>
-                        <file>${project.basedir}/../LICENSE.txt</file>
-                    </transformer>
+                  <transformer
+                      implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                    <resource>LICENSE.txt</resource>
+                    <file>${project.basedir}/../LICENSE</file>
+                  </transformer>
+                  <transformer
+                      implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                    <resource>NOTICE</resource>
+                    <file>${project.basedir}/../NOTICE</file>
+                  </transformer>
                 </transformers>
                 <artifactSet>
                 <includes>
@@ -142,6 +138,19 @@
                     <exclude>org.apache.phoenix:phoenix-server</exclude>
                   </excludes>
               </artifactSet>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                    <exclude>META-INF/license/*</exclude>
+                    <exclude>LICENSE.*</exclude>
+                    <exclude>NOTICE.*</exclude>
+                  </excludes>
+                </filter>
+              </filters>
             </configuration>
           </execution>
         </executions>
