--- a/phoenix-hive/pom.xml
+++ b/phoenix-hive/pom.xml
@@ -151,6 +151,10 @@
             <goals>
               <goal>single</goal>
             </goals>
+            <configuration>
+              <appendAssemblyId>false</appendAssemblyId>
+              <finalName>phoenix-${project.version}-hive</finalName>
+            </configuration>
           </execution>
         </executions>
       </plugin>
