PHOENIX-67 Include missing dependency on hadoop-azure to phoenix-core
Also ensure that the uber phoenix-client jar has the hadoop-azure and azure-storage
classes included.

--- a/phoenix-core/pom.xml
+++ b/phoenix-core/pom.xml
@@ -451,6 +451,10 @@
       <artifactId>hadoop-minicluster</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-azure</artifactId>
+    </dependency>
+    <dependency>
         <groupId>org.jruby.joni</groupId>
         <artifactId>joni</artifactId>
         <version>${joni.version}</version>
