BUG-63010 Phoenix-spark tests are failing due to missing class JacksonJaxbJsonProvider

--- a/pom.xml
+++ b/pom.xml
@@ -845,13 +845,13 @@
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-jaxrs</artifactId>
         <version>${jackson.version}</version>
-        <scope>test</scope>
+        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-xc</artifactId>
         <version>${jackson.version}</version>
-        <scope>test</scope>
+        <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
