--- a/phoenix-core/pom.xml
+++ b/phoenix-core/pom.xml
@@ -455,6 +455,11 @@
       <artifactId>hadoop-azure</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-minikdc</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
         <groupId>org.jruby.joni</groupId>
         <artifactId>joni</artifactId>
         <version>${joni.version}</version>
