PHOENIX-3236 Problem with shading apache commons on Azure.
Change-Id: Id406f2fd659a4d9f42e3997319271e2da6a81cd8

--- a/phoenix-client/pom.xml
+++ b/phoenix-client/pom.xml
@@ -275,6 +275,7 @@
                   <excludes>
                     <exclude>org.apache.commons.csv.**</exclude>
                     <exclude>org.apache.commons.logging.**</exclude>
+                    <exclude>org.apache.commons.configuration.**</exclude>
                   </excludes>
                 </relocation>
                 <relocation>
