BUG-70219 Add in a definition for the HWX internal nexus repo
Change-Id: Id669caed7f55b5179697a4ae396653fd042535b7

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>public</id>
+      <name>hwx</name>
+      <url>http://nexus-private.hortonworks.com/nexus/content/groups/public/</url>
+    </repository>
   </repositories>
 
   <parent>
