PHOENIX-3598 Implement HTTP parameter impersonation for PQS
Includes some ITs for PQS by elserj.

Change-Id: I098b92eff92d159088ff31850f102e9e62505050
Signed-off-by: Josh Elser <elserj@apache.org>
(cherry picked from commit cd2de75cbafbf894e0eb177c06a615d484d5f3ff)

--- a/phoenix-queryserver/pom.xml
+++ b/phoenix-queryserver/pom.xml
@@ -139,6 +139,11 @@
     </dependency>
     <!-- for tests -->
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.phoenix</groupId>
       <artifactId>phoenix-core</artifactId>
       <classifier>tests</classifier>
@@ -164,6 +169,11 @@
       <groupId>co.cask.tephra</groupId>
       <artifactId>tephra-core</artifactId>
       <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-minikdc</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
